Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-19381

Data race seen in mock_server with cookie's ref count

    XMLWordPrintable

Details

    • Untriaged
    • Unknown

    Description

      11:56:19 WARNING: ThreadSanitizer: data race (pid=47600)
      11:56:19   Write of size 4 at 0x7d2c0000aff0 by thread T18 (mutexes: write M1501):
      11:56:19     #0 mock_cookie_release /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/memcached/programs/engine_testapp/mock_server.c (engine_testapp+0x0000004cf455)
      11:56:19     #1 EventuallyPersistentEngine::releaseCookie(void const*) /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/ep-engine/src/ep_engine.cc:1906 (ep.so+0x00000013b10a)
      11:56:19     #2 ConnHandler::releaseReference(bool) /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/ep-engine/src/tapconnection.cc:306 (ep.so+0x0000001f5aee)
      11:56:19     #3 TapConnMap::manageConnections() /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/ep-engine/src/connmap.cc:531 (ep.so+0x000000230ae6)
      11:56:19     #4 ConnManager::run() /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/ep-engine/src/connmap.cc:151 (ep.so+0x00000024fd51)
      11:56:19     #5 ExecutorThread::run() /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/ep-engine/src/executorthread.cc:109 (ep.so+0x0000001e38f1)
      11:56:19     #6 launch_executor_thread(void*) /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/ep-engine/src/executorthread.cc:34 (ep.so+0x0000001e2f1a)
      11:56:19     #7 platform_thread_wrap /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/platform/src/cb_pthreads.c (libplatform.so.0.1.0+0x00000000377c)
      11:56:19 
      11:56:19   Previous write of size 4 at 0x7d2c0000aff0 by main thread:
      11:56:19     #0 mock_cookie_reserve /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/memcached/programs/engine_testapp/mock_server.c (engine_testapp+0x0000004cf3b5)
      11:56:19     #1 EventuallyPersistentEngine::reserveCookie(void const*) /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/ep-engine/src/ep_engine.cc:1897 (ep.so+0x00000013afca)
      11:56:19     #2 EventuallyPersistentEngine::createTapQueue(void const*, std::string&, unsigned int, void const*, unsigned long) /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/ep-engine/src/ep_engine.cc:2423 (ep.so+0x00000013e5ca)
      11:56:19     #3 EvpGetTapIterator(engine_interface*, void const*, void const*, unsigned long, unsigned int, void const*, unsigned long) /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/ep-engine/src/ep_engine.cc:1388 (ep.so+0x0000001375c3)
      11:56:19     #4 mock_get_tap_iterator /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/memcached/programs/engine_testapp/engine_testapp.c (engine_testapp+0x0000004c9c1c)
      11:56:19     #5 test_tap_ack_stream(engine_interface*, engine_interface_v1*) /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/ep-engine/tests/ep_testsuite.cc:6273 (ep_testsuite.so+0x000000066a61)
      11:56:19     #6 execute_test /home/couchbase/jenkins/workspace/ep-engine-threadsanitizer-3.0.x/memcached/programs/engine_testapp/engine_testapp.c (engine_testapp+0x0000004c4e9f)
      11:56:19     #7 main crtstuff.c (engine_testapp+0x0000004c2e01)
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              abhinav Abhi Dangeti
              abhinav Abhi Dangeti
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty