programs/engine_testapp/mock_server.c
@@ -21,6 +21,8 @@ time_t process_started;     /* when the mock server was started */
 rel_time_t time_travel_offset;
 static cb_mutex_t time_mutex;
 struct mock_connstruct *connstructs;
+/* ref_mutex to guard references, and object deletion in case references becomes zero */
+static cb_mutex_t ref_mutex;
 struct mock_extensions extensions;
 EXTENSION_LOGGER_DESCRIPTOR *null_logger = NULL;
 EXTENSION_LOGGER_DESCRIPTOR *stderr_logger = NULL;
@@ -104,18 +106,22 @@ static int mock_get_socket_fd(const void *cookie) {
 }
 
 static ENGINE_ERROR_CODE mock_cookie_reserve(const void *cookie) {
+    cb_mutex_enter(&(ref_mutex));
     struct mock_connstruct *c = (struct mock_connstruct *)cookie;
     c->references++;
+    cb_mutex_exit(&(ref_mutex));
     return ENGINE_SUCCESS;
 }
 
 static ENGINE_ERROR_CODE mock_cookie_release(const void *cookie) {
+    cb_mutex_enter(&(ref_mutex));
     struct mock_connstruct *c = (struct mock_connstruct *)cookie;
 
     c->references--;
     if (c->references == 0) {
         free(c);
     }
+    cb_mutex_exit(&(ref_mutex));
     return ENGINE_SUCCESS;
 }
 
@@ -429,6 +435,7 @@ void init_mock_server(ENGINE_HANDLE *server_engine) {
     session_ctr = 0;
     cb_mutex_initialize(&session_mutex);
     cb_mutex_initialize(&time_mutex);
+    cb_mutex_initialize(&ref_mutex);
 }
 
 struct mock_connstruct *mk_mock_connection(const char *user, const char *config) {
@@ -471,11 +478,13 @@ const void *create_mock_cookie(void) {
 }
 
 void destroy_mock_cookie(const void *cookie) {
+    cb_mutex_enter(&(ref_mutex));
     struct mock_connstruct *c = (struct mock_connstruct *)cookie;
     disconnect_mock_connection(c);
     if (c->references == 0) {
         free((void*)cookie);
     }
+    cb_mutex_exit(&(ref_mutex));
 }
 
 void mock_set_ewouldblock_handling(const void *cookie, bool enable) {
@@ -499,6 +508,7 @@ void waitfor_mock_cookie(const void *cookie) {
 }
 
 void disconnect_mock_connection(struct mock_connstruct *c) {
+    // ref_mutex already held in calling function
     c->connected = false;
     c->references--;
     mock_perform_callbacks(ON_DISCONNECT, NULL, c);
